Update build.gradle to include necessary --add-exports directive